# ratelimit-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_core.cpp
c_api/: ratelimit_c.cpp
c_consumer/: c_consumer.c
cmake/: RatelimitConfig.cmake.in  ratelimit.pc.in
consumer/: CMakeLists.txt  main.cpp
examples/: cli.cpp
include/ratelimit/: clock.h  export.h  rate_limiter.h  ratelimit_c.h  types.h  version.h  version.h.in
jni/: NativeRateLimiter.java  ratelimit_jni.cpp
src/: inproc_rate_limiter.cpp  version.cc
tests/: test_core.cpp
